# IS-T1-CPP

./: CMakeLists.txt  Makefile  build.sh  documentatie.doc
logs/: serverLog.txt
src/: main.cpp
